上傳背景圖

--- a/source/_posts/角色介紹-杏.md
+++ b/source/_posts/角色介紹-杏.md
@@ -1,12 +1,12 @@
 ---
 title: 角色介紹-杏
-thumbnail: /images/apricot_02.PNG
-categories: 呼嚕嚕
+thumbnail: /images/apricot_02.PNG	
+categories: 呼嚕嚕角色介紹
 tags :
 - 角色介紹
 ---
-# 獵人
-### 個性 ： 輕浮
-### 興趣 ： ??
-### 身份 ： 旅行者
-### 角色簡介 ： 最近來到村莊的旅行者，似乎是有什麼目的才來到
+# 杏
+### 個性 ： 腹黑
+### 興趣 ： 與他人交流、看琥珀犯蠢
+### 身份 ： 鎮長的孫女
+### 角色簡介 ： 在交際上一直保持著完美無缺的姿態，但是當面對時琥珀卻彷彿變了另一個人的似的，不過兩邊都是無論是哪邊都是其本來的面貌的樣子。
