--- a/source/_posts/角色介紹-獵人.md
+++ b/source/_posts/角色介紹-獵人.md
@@ -1,7 +1,7 @@
 ---
 title: 角色介紹-獵人
 thumbnail: /images/hunter_04.png
-categories: 呼嚕嚕
+categories: 呼嚕嚕角色介紹
 tags :
 - 角色介紹
 ---
@@ -9,4 +9,4 @@ tags :
 ### 個性 ： 輕浮
 ### 興趣 ： ??
 ### 身份 ： 旅行者
-### 角色簡介 ： 最近來到村莊的旅行者，似乎是有什麼目的才來到
+### 角色簡介 ： 最近來到村莊的旅行者，似乎是有什麼目的才來到城鎮的樣子。
