--- a/source/_posts/角色介紹-琥珀.md
+++ b/source/_posts/角色介紹-琥珀.md
@@ -1,12 +1,12 @@
 ---
 title: 角色介紹-琥珀
 thumbnail: /images/amber_01.PNG
-categories: 呼嚕嚕
+categories: 呼嚕嚕角色介紹
 tags :
 - 角色介紹
 ---
-# 獵人
-### 個性 ： 輕浮
-### 興趣 ： ??
-### 身份 ： 旅行者
-### 角色簡介 ： 最近來到村莊的旅行者，似乎是有什麼目的才來到
+# 琥珀
+### 個性 ： 急躁
+### 興趣 ： 探險
+### 身份 ： 普通的城鎮居民
+### 角色簡介 ： 沒什麼特殊的點的普通居民，但是不知道為什麼常常被杏壓在底下做東做西，在她的面前總是抬不起頭。
