--- a/source/_posts/角色介紹-紅.md
+++ b/source/_posts/角色介紹-紅.md
@@ -1,12 +1,12 @@
----
+	---
 title: 角色介紹-紅
 thumbnail: /images/red_01.png
-categories: 呼嚕嚕
+categories: 呼嚕嚕角色介紹
 tags :
 - 角色介紹
 ---
 # 紅
-### 森林之家的二女
-### 出門總是戴著斗篷試圖隱藏住面貌，殊不知自以為完美的偽裝，其實一點也沒藏住
-### 平常總是畏畏縮縮的，似乎是隱瞞了些什麼
-
+### 個性 ： 害羞、膽小
+### 興趣 ： 做菜
+### 身份 ： 森之家的住民
+### 角色簡介 ： 在面對呼嚕嚕時總是表情特別多變，但是只要離開森之家，必定會將面容透過斗篷來隱藏住，與其說是害怕人群不如說是害怕......
