--- a/source/_posts/角色介紹-赤.md
+++ b/source/_posts/角色介紹-赤.md
@@ -1,12 +1,12 @@
 ---
 title: 角色介紹-赤
 thumbnail: /images/aka_01.png
-categories: 呼嚕嚕
+categories: 呼嚕嚕角色介紹
 tags :
 - 角色介紹
 ---
 # 赤
-### 森林之家的長女
-### 最喜歡做的事就是捉弄自己的妹妹，不過似乎很懂得拿捏如何不讓人紅生氣
-### 時常把奶奶的教誨拿到嘴邊來講，不過實際做起來或許又是另一回事了
-
+### 個性 ： 大方、愛惡作劇
+### 興趣 ： 捉弄小紅
+### 身份 ： 森之家的住民
+### 角色簡介 ： 最喜歡做的事就是捉弄自己的妹妹，不過似乎很懂得拿捏如何不讓人紅生氣，時常把奶奶的教誨拿到嘴邊來講，不過實際做起來或許又是另一回事了。
