--- a/source/_posts/角色介紹-呼嚕嚕.md
+++ b/source/_posts/角色介紹-呼嚕嚕.md
@@ -1,12 +1,12 @@
 ---
 title: 角色介紹-呼嚕嚕
 thumbnail: /images/fururu_05.png
-categories: 呼嚕嚕
+categories: 呼嚕嚕角色介紹
 tags :
 - 角色介紹
 ---
 # 呼嚕嚕
-### 某天突然憑空出現在森林之家前的迷之生物
-### 最喜歡的東西是餅乾，不過最近似乎還喜歡上了小紅所做的料理
-### 十分不會察言觀色這件事，對他來說既是優點、也是缺點
-
+### 個性 ： 天真
+### 興趣 ： 吃餅乾
+### 身份 ： 從天而降的失憶的迷之生物
+### 角色簡介 ： 最喜歡的東西是餅乾，不過最近似乎還喜歡上了小紅所做的料理，在與他人交際這件事上，呼嚕嚕十分地不會察言觀色，對他來說這既是優點、也是缺點。
